--- a/Ranzhi/.classpath
+++ b/Ranzhi/.classpath
@@ -8,6 +8,8 @@
 	<classpathentry kind="lib" path="lib/org.testng_6.12.0.r201709030044.jar"/>
 	<classpathentry kind="lib" path="lib/org.testng.source_6.12.0.r201709030044.jar"/>
 	<classpathentry kind="lib" path="lib/selenium-server-standalone-3.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/poi-3.17.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-3.17.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/auto2017"/>
