--- a/Ranzhi/.classpath
+++ b/Ranzhi/.classpath
@@ -10,6 +10,7 @@
 	<classpathentry kind="lib" path="lib/selenium-server-standalone-3.6.0.jar"/>
 	<classpathentry kind="lib" path="lib/poi-3.17.jar"/>
 	<classpathentry kind="lib" path="lib/poi-ooxml-3.17.jar"/>
+	<classpathentry kind="lib" path="lib/saxon-8.7.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/auto2017"/>
