已完成监听器+邮件发送，测试报告美化，页面对象模式

--- a/Ranzhi/.settings/org.eclipse.core.resources.prefs
+++ b/Ranzhi/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//Data/setting-addbankuai.txt=UTF-8
+encoding//Data/setting-children.txt=UTF-8
+encoding//Data/settingsBankuai.txt=UTF-8
